# logic-solver-rs

./: Cargo.toml  LICENSE  LICENSE-Apache-2.0  README.md  askama.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: manual.ja.md
src/: ast.rs  debruijn.rs  icnf.rs  icnf_decomp.rs  icnf_solver.rs  kripke.rs  main.rs  nj.rs  parser.rs  prop.rs  result.rs  rollback.rs  rpc.rs  tests.rs  tokenizer.rs  visible_proof.rs
src/ipc/: icnf.rs  icnf_decomp.rs  icnf_refutation.rs  icnf_solver.rs  mod.rs  refutation.rs  solver.rs
src/ipc/snapshots/: logic_solver__ipc__icnf_refutation__tests__register1-2.snap  logic_solver__ipc__icnf_refutation__tests__register1.snap
src/latex/: branch_transformation.rs  kripke.rs  mod.rs  nj.rs  prop.rs  split.rs
src/naming/: kripke.rs  mod.rs  nj.rs  prop.rs
src/parsing/: ast.rs  error.rs  mod.rs  parser.rs  pos.rs  tokenizer.rs
templates/: base.tex  error.tex  result.tex  success.tex
tests/: latex.rs
tests/snapshots/: latex__latex1.snap  latex__latex10.snap  latex__latex11.snap  latex__latex12.snap  latex__latex13.snap  latex__latex14.snap  latex__latex15.snap  latex__latex16.snap  latex__latex2.snap  latex__latex3.snap  latex__latex4.snap  latex__latex5.snap  latex__latex6.snap  latex__latex7.snap  latex__latex8.snap  latex__latex9.snap
