[package]
name = "logic-solver"
version = "0.1.0"
authors = ["Masaki Hara <ackie.h.gmai@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22.3"
clap = "2.33.3"
structopt = "0.3.21"
thiserror = "1.0.28"
askama = "0.10.5"
varisat = "0.2.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.66"

[dev-dependencies]
big_s = "1.0.2"
maplit = "1.0.2"
insta = "1.7.1"

[patch.crates-io]
# https://github.com/bitvecto-rs/bitvec/issues/105
# https://github.com/Geal/nom/pull/1304
nom = { git = "https://github.com/Geal/nom", rev = "03a1025a5d98df931f12b1935d04f7bd9fe7752c" }
